--- a/negyedik.html
+++ b/negyedik.html
@@ -94,12 +94,15 @@
 <div class="kartya">
     <h2>Név: Görög Ádám</h2>
     <p>
-        Sziasztok! Ádám vagyok, a FastFox csapat egyik tagja! 🦊⚡
+        Sziasztok Görög Ádám vagyok és Programtervező Informatikus hallgatónak tettetem magam immáron már harmadik éve. Szabadidőmben úgy teszek mint aki ért a számítógépekhez vagy azok programozásához.<br>
+        Ha közös szenvedésről van szó, szívesen csatlakozok sorstársaimhoz egy előadásra.<br>
+        Tudok ahol segítek a spanonak (1500/óra)<br>
+        Jelmondatom: Improvise Adapt Overcome<br>
     </p>
 
     <div class="kepek">
         <img src="img/adam.jpg">
-        <img src="img/adam.jpg">
+        <img src="img/adam2.jpg">
     </div>
 </div>
 
